# d2c_mp_forecast_tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  environment.yaml  environment.yml  pyproject.toml  requirements.txt
src/d2c_mp_sales_forecaster/: D2CMPForecaster.py
src/d2c_mp_sales_forecaster/config/: d2c_forecast_app_style.mplstyle  db_ddl.sql
src/d2c_mp_sales_forecaster/pages/: _1_Load_Data.py  _2_Product_Selection.py  _3_Tune_and_Train.py  _4_Forecast_Product.py  _5_Distribute_Size_Forecast.py
src/d2c_mp_sales_forecaster/utils/: db_manager.py
tests/: test_1_Load_Data.py  test_2_Product_Selection.py  test_3_Tune_and_Train.py  test_4_Forecast_Product.py  test_5_Distribute_Size_forecast.py
tests/select_product/: lag_data.csv  master_data_enc.csv  sales_data.csv
